# icq

./: README.md
icq-backend/: .gitignore  README.md  Untitled.ipynb  pyproject.toml
icq-backend/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
icq-backend/backend/: settings.py  urls.py
icq-backend/core/: admin.py  apps.py  colors.py  fields.py  forms.py  functions.py  hash.py  models.py  scraper.py  tests.py  types.py  urls.py  views.py
icq-backend/core/migrations/: 0000_bootstrap.py  0001_initial.py
icq-backend/core/static/: main.css
icq-backend/core/templates/: base.html
icq-backend/core/templates/core/: index.html  job.html  similar.html  site.html
icq-backend/core/templates/core/common/: color_group.html  color_square.html  job.html  timeline.html
icq-backend/core/templatetags/: colors.py
icq-backend/docs/: NOTES.md  OVERVIEW.md
